@@ -1,8 +1,8 @@
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
+examples/conflict.pl
+examples/hash.pl
+examples/hash_array.pl
+examples/hash_array_with_cb.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
