@@ -1,5 +1,6 @@
 0.08
  - Improve LICENSE AND COPYRIGHT section in doc.
+ - Rename examples to better names.
  - Update copyright years.
 
 0.07 2020-01-12T00:03:27+01:00
